--- a/assets/styles/scss/blocks/_header.scss
+++ b/assets/styles/scss/blocks/_header.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 50px;
     background-color: $light-blue;
-    z-index: 2;
+    z-index: 100;
 
     #header_container{
         display: grid;
@@ -47,8 +47,6 @@
 
 @media (max-width: $max-for_mobile){
     #header{
-        z-index: 2;
-
         #header_container{
             grid-template-columns: 1fr 5fr;
 
